--- a/module-admin/src/main/resources/templates/roles/memberMapping.html
+++ b/module-admin/src/main/resources/templates/roles/memberMapping.html
@@ -14,13 +14,12 @@
                 <h4 class="sub-title"><strong>사용자 정보</strong></h4>
             </div>
             <div class="card-block-small">
-                <form id="userSearchForm" name="userSearchForm" onsubmit="return false;" th:action="@{/admin/roles/userMapping/users}">
+                <form id="userSearchForm" name="userSearchForm">
                     <div class="col-12 col-lg-6 mb-3">
                         <div class="mb-0 form-group row">
                             <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
                             <div class="input-group input-group-dropdown mb-0">
                                 <select id="searchType" name="searchType" class="form-select form-control form-control-round custom-select left-select">
-                                    <option value="">- 선택 -</option>
                                     <option value="email">이메일</option>
                                     <option value="nickname">닉네임</option>
                                 </select>
@@ -29,8 +28,8 @@
                         </div>
                     </div>
                     <div class="mt-1 p-t-20 text-center">
-                        <button type="button" class="btn btn-gray m-r-5">초기화</button>
-                        <button type="button" class="btn btn-primary">검색</button>
+                        <button type="button" class="btn btn-gray m-r-5 btn-init">초기화</button>
+                        <button type="submit" class="btn btn-primary btn-search">검색</button>
                     </div>
                 </form>
 
@@ -43,14 +42,6 @@
                             <button type="button" id="addMemberBtn" class="btn btn-transparent">사용자추가</button>
                         </div>
                     </div>
-                    <!--<div class="p-20 p-b-0 card-header-flex">
-                        <div class="col-12 col-md-6 mb-2 mb-md-0">
-                            <h5><strong>사용자 검색 결과</strong></h5>
-                        </div>
-                        <div class="col-12 col-md-6 text-right">
-                            <button type="button" id="addMemberBtn" class="btn btn-transparent">사용자추가</button>
-                        </div>
-                    </div>-->
                     <div class="card-block-small">
                         <div class="dt-responsive table-responsive">
                             <table id="mappedUserTable" class="display" style="width:100%; display:none;">
@@ -79,7 +70,22 @@
 <script type="text/javascript" th:src="@{/js/custom-design.js}"></script>
 <script th:inline="javascript">
     var memberMappingController = {
-        findMappedMembers: function (roleId) {
+        selectedRoleId : null
+
+        , init: function() {
+            $('#userSearchForm').on('submit', function(e){
+                e.preventDefault();
+                memberMappingController.findMappedMembers(memberMappingController.selectedRoleId);
+            })
+
+            $('#userSearchForm .btn-init').on('click', function() {
+                $('#searchType').val('email');
+                $('#searchKeyword').val('');
+                $('select').niceSelect('update');
+            })
+        }
+
+        , findMappedMembers: function (roleId) {
             if (!!mappedUserTable) mappedUserTable.destroy();
 
             mappedUserTable = $('#mappedUserTable').DataTable({
@@ -102,7 +108,7 @@
 
                 ajax: {
                     async: false,
-                    url: `/admin/roles/${roleId}/members`,
+                    url: `/admin/roles/${roleId}/members?${$('#userSearchForm').serialize()}`,
                     method: 'get',
                     "dataSrc": function (res) {
                         return res.data;
@@ -134,6 +140,7 @@
             $('#mappedUserTable').show();
         }
     };
+
     var roleController = {
         roles: [],
         parentNode: null,
@@ -189,7 +196,9 @@
             }).bind("select_node.jstree", function (event, data) {
                 _this.selectedNode = _this.$jstree.jstree('get_selected', true)[0];
                 _this.parentNode = _this.$jstree.jstree(true).get_node(_this.selectedNode.parent);
-                memberMappingController.findMappedMembers(_this.selectedNode.original.id);
+                const selectedRoleId = _this.selectedNode.original.id;
+                memberMappingController.selectedRoleId = selectedRoleId;
+                memberMappingController.findMappedMembers(selectedRoleId);
             }).bind('loaded.jstree', function () {
                 const firstNodeId = _this.roles[0].id
                 _this.$jstree.jstree("select_node", "#" + firstNodeId);
@@ -274,6 +283,7 @@
 
     $(function () {
         roleController.init();
+        memberMappingController.init();
 
         $('#addMemberBtn').on('click', function () {
             if (!!roleController.selectedNode) {
