feat: 자원관리 > 삭제 기능 추가

--- a/module-admin/src/main/resources/templates/resources/view.html
+++ b/module-admin/src/main/resources/templates/resources/view.html
@@ -311,7 +311,7 @@
                                 "icon" : false,
                                 "action": function (obj) {
                                     const selectedNode = $.jstree.reference(obj.reference).get_node(obj.reference).original;
-                                    // resourceController.delete(selectedNode.id);
+                                    resourceController.delete(selectedNode.id);
                                 }
                             }
                         }
