--- a/module-admin/src/main/resources/static/files/assets/pages/treeview/treeview.css
+++ b/module-admin/src/main/resources/static/files/assets/pages/treeview/treeview.css
@@ -110,12 +110,13 @@
 }
 .vakata-context,
 .vakata-context ul {
+    border-radius:15px;
     margin: 0;
     padding: 2px;
     position: absolute;
     background: #f5f5f5;
     border: 1px solid #979797;
-    box-shadow: 2px 2px 2px #999999;
+    /*box-shadow: 2px 2px 2px #999999;*/
 }
 .vakata-context ul {
     list-style: none;
@@ -143,11 +144,11 @@
     text-shadow: 1px 1px 0 white;
     border-radius: 1px;
 }
-.vakata-context li > a:hover {
+/*.vakata-context li > a:hover {
     position: relative;
     background-color: #e8eff7;
     box-shadow: 0 0 2px #0a6aa1;
-}
+}*/
 .vakata-context li > a.vakata-context-parent {
     background-image: url("data:image/gif;base64,R0lGODlhCwAHAIAAACgoKP///yH5BAEAAAEALAAAAAALAAcAAAIORI4JlrqN1oMSnmmZDQUAOw==");
     background-position: right center;
@@ -156,11 +157,11 @@
 .vakata-context li > a:focus {
     outline: 0;
 }
-.vakata-context .vakata-context-hover > a {
+/*.vakata-context .vakata-context-hover > a {
     position: relative;
     background-color: #e8eff7;
     box-shadow: 0 0 2px #0a6aa1;
-}
+}*/
 .vakata-context .vakata-context-separator > a,
 .vakata-context .vakata-context-separator > a:hover {
     background: white;
@@ -183,7 +184,7 @@
     border: 0;
     box-shadow: 0 0 0;
 }
-.vakata-context li > a > i {
+/*.vakata-context li > a > i {
     text-decoration: none;
     display: inline-block;
     width: 2.4em;
@@ -205,7 +206,7 @@
     background: white;
     margin: 0 0.5em 0 0;
     border-left: 1px solid #e2e3e3;
-}
+}*/
 .vakata-context .vakata-contextmenu-shortcut {
     font-size: 0.8em;
     color: silver;
